Work on layout issues.

--- a/classroom/src/app/bubble-chart/bubble-chart.component.scss
+++ b/classroom/src/app/bubble-chart/bubble-chart.component.scss
@@ -3,26 +3,32 @@ circle {
   fill: $cmu-secondary-blue;
 }
 
-.tool {
-  display: flex;
-  flex-flow: column;
-  height: 100%;
+.mat-column-title {
+  //flex: 0 2 12em !important;
+  max-width: 12em !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-app-nav {
-  flex: 0 1 auto;
+.bubble-col {
+  //flex: 0 0 44px !important;
+  max-width: 46px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.container {
-  flex: 1 1 auto;
-  margin: 5px;
-  overflow: auto;
+.tilt-header {
+  text-align:center;
+  white-space:nowrap;
+  transform-origin:50% 50%;
+  transform: rotate(-45deg);
 }
-
 .model_entry {
   color: blue;
   opacity: 0.4;
 }
-a.name_entry {
+.name_entry {
   cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 circle.tick {
